clang/test/BSC/Negative/Method/Struct/struct_redefinition_member/struct_redefinition_member.cbs
// RUN: %clang_cc1 -verify %s

struct F {
    int increase; // expected-note {{previous definition is here}}
};
void struct F::increase(struct F* this) { // expected-error {{redefinition of 'increase' as different kind of symbol}}
    
}
